--- a/package.json
+++ b/package.json
@@ -11,11 +11,24 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@discord-player/extractor": "^3.0.2",
+        "@discordjs/opus": "^0.5.3",
+        "@discordjs/rest": "^0.2.0-canary.0",
+        "@discordjs/voice": "^0.7.5",
+        "axios": "^0.25.0",
+        "discord-api-types": "^0.26.1",
         "discord-player": "^5.2.0",
-        "discord-together": "^1.3.3",
-        "discord.js": "^13.1.0",
-        "glob": "^7.1.7",
-        "mongoose": "^6.1.6",
-        "quick.db": "^7.1.3"
+        "discord-together": "^1.3.25",
+        "discord.js": "^13.5.1",
+        "express": "^4.17.2",
+        "ffmpeg-static": "^4.4.1",
+        "fs": "^0.0.1-security",
+        "glob": "^7.2.0",
+        "mongoose": "^6.1.7",
+        "ms": "^2.1.3",
+        "mysql": "^2.18.1",
+        "quick.db": "^7.1.3",
+        "reconlx": "^2.5.2",
+        "util": "^0.12.4"
     }
 }
