--- a/config.json
+++ b/config.json
@@ -1,5 +1,4 @@
 {
-    "token": "CONVERT TO SECRET",
-    "prefix": "v!",
-    "mongooseConnectionString": "CONVERT TO SECRET"
+    "token": "INSERT TOKEN HERE",
+    "mongooseConnectionString": "INSERT STRING HERE"
 }
