Fix/acknowledge IntelliJ warnings

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,5 +1,5 @@
 name: 🐛 Report a bug
-description: Report a bug, crash, mistake or unintended behaviour. Please file a seperate report for each problem.
+description: Report a bug, crash, mistake or unintended behaviour. Please file a separate report for each problem.
 title: Add a descriptive title
 labels: bug
 
@@ -10,7 +10,7 @@ body:
         Before reporting a bug, please make sure you've searched if it already exists.
   - type: textarea
     attributes:
-      label: General discription
+      label: General description
       description: Please provide a general description of what happened.
     validations:
       required: true
