--- a/project.json
+++ b/project.json
@@ -4,7 +4,7 @@
     "version": "0.0.1",
     "authors": ["DWAA", "Terroid"],
     "email": "skandabhairava@gmail.com",
-    "author_github": ["https://github.com/skandabhairava", "https://github.com/DWAA1660"],
+    "authors_github": ["https://github.com/skandabhairava", "https://github.com/DWAA1660"],
     "entry_point": "venox.py",
     "working_directory": "src",
     "github": "",
