--- a/.gitignore
+++ b/.gitignore
@@ -379,3 +379,4 @@ $RECYCLE.BIN/
 .idea/inspectionProfiles/Project_Default.xml
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/discord.xml
+.idea
