--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -34,7 +34,7 @@ body:
       required: true
   - type: textarea
     attributes:
-      label: Additional information
+      label: Additional utility
       description: |
         If you can think of anything else that might help, there's plenty of room for it here. 😉
     validations:
