--- a/.github/ISSUE_TEMPLATE/enhancement.yml
+++ b/.github/ISSUE_TEMPLATE/enhancement.yml
@@ -28,7 +28,7 @@ body:
       required: false
   - type: textarea
     attributes:
-      label: Additional utility
+      label: Additional information
       description: |
         If you can think of anything else that might help us, there's plenty of room for it here. 😉
     validations:
