--- a/.gitignore
+++ b/.gitignore
@@ -373,3 +373,5 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,python,pycharm,venv,visualstudiocode
 .idea/
+Pipfile
+*.lock
