TTS, global modmail, statistic channels, & more
- Update JDA from `5.0.0-beta.4` to `5.0.0-beta.6`
- Move apps from `network.venox.cobalt.contexts` to `network.venox.cobalt.apps`
- Add TTS command and app
- Add member/human statistic channels
- Change status update time from 20 seconds to 30 seconds
- Add `guild.mod` and `guild.modmail` config options
- Revert `CoFile#getEmbed` to use `Object` varargs
- Adjust ordering of methods in command files
- Add global modmail
- Make `/support` give option to either open modmail or join support server
- Remove `NEWS` channel type from `/welcome`
- Add `QotdCmd#formatQuestion(CoQuestion)
- Add `QotdCmd#getQuestionStream(CommandAutoCompleteInteractionEvent, String)`
- Add `CoUtilities#shorten(String, int)`
- Add `CoUtilities#deleteFile(Path, boolean)` and `CoUtilities#deleteFile(Path)`

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -20,6 +20,10 @@ guild:
   qotd-manager: 891405322105811004
   # QOTD Manager chat where QOTD alerts will be sent
   qotd-chat: 891404641277984788
+  # The role ID given to moderators
+  mod: 889244089801900102
+  # Global modmail forum channel for moderators
+  modmail: 1080663471491919952
   # Log channel for global actions (super punishments, etc...)
   log: 1008889846850408489
 
